--- a/logPage/loadingPage.html
+++ b/logPage/loadingPage.html
@@ -10,7 +10,7 @@
 <input id="userInput" placeholder="Insert user name" name="userName" new input>
 <button class="submitButton" id="connectingBtn"> connect here </button>
 <button class="submitButton" id="signingBtn"> sign in as new user </button>
-<p1 id="msgBrd"></p1>
+<p1 id="msgBrd" class="warrnings"></p1>
 <div><script src="loadingPage.js"></script></div>
 <div class="jelly-container">
     <div class="bubble-1"></div>
